[activities] Fix showing associated files

BUG: 453110